--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 img {
     display: block;
     max-width: 100%;
+    height: auto;
 }
 
 body {
@@ -28,6 +29,10 @@ nav, article, ul {
     display: flex;
 }
 
+.header--image {
+    aspect-ratio: 16 / 9;
+}
+
 nav {
     justify-content: space-between;
     padding-bottom: 40px;
@@ -36,6 +41,12 @@ nav {
 ul {
     list-style-type: none;
     gap: 36px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
 }
 
 article {
@@ -58,6 +69,7 @@ section {
 
 .box-container {
     display: flex;
+    justify-content: center;
 }
 
 .box {
@@ -65,18 +77,26 @@ section {
     flex-direction: column;
     align-items: center;
     margin: 40px 40px 40px 0;
-    /* max-width: 150px; */
+    max-width: 150px;
 }
 
 .box img {
     height: 150px;
     width: 150px;
+    border: 3px solid #3b82f6;
+    border-radius: .5rem;
+    object-fit: cover;
 }
 
 .box p {
+    padding-top: 10px;
     width: fit-content;
 }
 
 .quote {
     background-color: #e5e7eb;
+}
+
+.quote-author {
+    font-weight: 900;
 }
